PER-9265 fixed the overlapping of the title and search bar

--- a/src/app/public/components/public-archive/public-archive.component.scss
+++ b/src/app/public/components/public-archive/public-archive.component.scss
@@ -85,6 +85,10 @@ $desktop-size: pxToGrid(200px);
 
   &-public-profile {
     @include banner-margin-offset-public-profile;
+
+    @media screen and (max-width: 1440px){
+      top: 0
+    }
   }
 }
 
